# guardscope

./: .gitignore  LEGAL.md  LICENSE  README.md  README_CN.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  frontend.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: smoke.mjs
frontend/src/: App.tsx  main.tsx  types.ts  vite-env.d.ts
guardscope/: __init__.py  cli.py
guardscope/api/: app.py
guardscope/core/: __init__.py  db.py  dedupe.py  fingerprint.py  models.py  normalize.py  scoring.py
guardscope/data/: demo_findings.json
guardscope/lab/: __init__.py  registry.py  scope.py
guardscope/parsers/: __init__.py  bandit.py  base.py  manager.py  nmap.py  pipaudit.py  sarif.py  semgrep.py  trivy.py  zap.py
guardscope/plugins/: __init__.py  base.py  sample.py
guardscope/reporting/: __init__.py  html.py  json_report.py  markdown.py  sarif_report.py
offensive/: __init__.py  api.py  audit.py  cli.py  hydra_runner.py  nmap_runner.py  nuclei_runner.py  registry.py  scope_guard.py  sqlmap_runner.py
offensive/lab_targets/: README.md  __init__.py
tests/: conftest.py  test_api.py  test_cli.py  test_cors.py  test_dedupe.py  test_normalize.py  test_parsers.py  test_scope.py
tests/fixtures/: bandit_sample.json  nmap_sample.xml  pipaudit_sample.json  sarif_sample.json  semgrep_sample.json  trivy_sample.json  zap_sample.json
tests/offensive/: __init__.py  test_api.py  test_audit.py  test_runners.py  test_scope_guard.py
(+19 files in other folders)
