[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardscope"
version = "0.1.0"
description = "Defense-oriented, authorization-scoped vulnerability management and local-lab verification."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "GuardScope Authors" }]
keywords = ["security", "vulnerability-management", "defensive", "lab", "owasp", "sarif"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "typer>=0.12",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
guardscope = "guardscope.cli:app"

[tool.setuptools.packages.find]
include = ["guardscope*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]